# careergenie-talent-discovery-mvp

./: README.md  pyproject.toml  requirements.txt
app/: enrichment.py  github.py  integration.py  main.py  outreach.py  scoring.py
ui/: streamlit_app.py
